--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "packageManager": "pnpm@8.6.12",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "check-types": "tsc --noEmit",
     "build": "tsc && vite build",
@@ -30,6 +33,12 @@
     "@ant-design/icons": "^6.0.0",
     "@craftjs/core": "^0.2.12",
     "@emotion/css": "^11.13.5",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mantine/core": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
     "antd": "^5.24.5",
     "lodash": "^4.17.21",
     "react-router-dom": "^7.4.1"
