--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "core",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "@huos/core",
+  "version": "1.0.1",
+  "description": "",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.mjs",
+  "types": "dist/index.d.mts",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "tsup --watch",
+    "build": "tsup"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "i18next": "^23.5.1",
+    "ky": "^1.2.2",
+    "re-resizable": "^6.9.11",
+    "react-error-boundary": "^4.0.11",
+    "react-i18next": "^13.3.0",
+    "styled-system": "^5.1.5",
+    "sucrase": "^3.34.0",
+    "zustand": "^4.4.3"
   }
 }
